--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ nav ul li a:hover {
 }
 
 .hero {
-    background: url('./Photos/landingpagemain.webp') no-repeat center center/cover;
+    background: url("./Photos/landingpagemain.webp") no-repeat center center/cover;
     height: 90vh;
     display: flex;
     align-items: center;
