--- a/styles.css
+++ b/styles.css
@@ -45,10 +45,10 @@ nav ul li a:hover {
 }
 
 .hero {
-    background: url("./Photos/landingpagemain.webp") no-repeat center center/cover;
+    background: url(".\Photos\landingpagemain.webp") no-repeat center center/cover;
     height: 90vh;
     display: flex;
-    align-items: center;
+      align-items: center;
     justify-content: center;
     text-align: center;
     color: white;
